--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,36 +13,21 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: mixed-line-ending
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v2.2.0
-    hooks:
-    -   id: seed-isort-config
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.4.2
+-   repo: https://github.com/pycqa/isort
+    rev: 5.3.2
     hooks:
     -   id: isort
--   repo: https://github.com/psf/black
-    rev: 20.8b1
+        args: ["--profile", "black"]
+-   repo: https://github.com/python/black
+    rev: 19.10b0
     hooks:
     -   id: black
--   repo: https://github.com/asottile/pyupgrade
-    rev: v2.7.2
-    hooks:
-    -   id: pyupgrade
-        args: [--py36-plus]
--   repo: https://github.com/asottile/blacken-docs
-    rev: v1.8.0
-    hooks:
-    -   id: blacken-docs
-        additional_dependencies: [black==20.8b1]
+        pass_filenames: true
 -   repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
     hooks:
-    - id: flake8
-      args:
-      - --max-line-length=88
-      # D106 Missing docstring in public nested class
-      # D401 First line should be in imperative mood
-      - --extend-ignore=D100,D102,D106,D401
-      additional_dependencies:
-      - flake8-docstrings
+    -   id: flake8
+        pass_filenames: true
+        # this seems to need to be here in addition to setup.cfg
+        exclude: __init__.py
+            - flake8-docstrings
